Update to latest plugin

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -200,6 +200,7 @@ PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
 +DirectoriesToAlwaysCook=(Path="/Game/ArticyContent")
++DirectoriesToAlwaysStageAsUFS=(Path="ArticyContent/Generated")
 
 [/Script/ArticyRuntime.ArticyPluginSettings]
 KeepDatabaseBetweenWorlds=True
@@ -217,5 +218,5 @@ bShouldAcquireMissingChunksOnLoad=False
 MetaDataTagsForAssetRegistry=()
 
 [Internationalization]
--LocalizationPaths=%GAMEDIR%Content/Localization/Game
++LocalizationPaths=%GAMEDIR%Content/Localization/Game
 
