--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ue_version: [5.3, 5.4, 5.5]
+        ue_version: [5.3, 5.4, 5.5, 5.6, 5.7]
 
     steps:
       - name: Checkout Repository
